Test all functions, work on equal and signs

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         </div>
       </div>
     </div>
+    <div class="message">
+
+    </div>
   </body>
 </html>
 <script src="script.js"></script>
