--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="row clearer">
           <button class="clear">C</button>
           <button class="delete">←</button>
+          <button class="sign">+/-</button>
         </div>
         <div class="row">
           <button class="digits">7</button>
@@ -33,8 +34,8 @@
           <button class="operators">-</button>
         </div>
         <div class="row">
-          <button class="sign">+/-</button>
           <button class="digits">0</button>
+          <button class="dot">.</button>
           <button class="equal">=</button>
           <button class="operators">+</button>
         </div>
